--- a/WindowsFormsApp1/Form1.resx
+++ b/WindowsFormsApp1/Form1.resx
@@ -123,6 +123,9 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="contextMenuStrip2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>287, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>59</value>
   </metadata>
@@ -257,26 +260,26 @@
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wAA/wAKCgoKCgoKCgoKCgoKCgoK
-        CgoKCgoKCgoKCv//////CgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCv//AAoKCgAAAAoKCgoKCgoK
-        CgoKCgAACgoKCgoKCgoKCv8KCgoKAAAACgoKCgoKCgoKCgoKAAAKCgoKCgoKCgoKCgoKCgoKCgoKCgoK
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP///wAAAAAKCgoKCgoKCgoKCgoKCgoK
+        CgoKCgoKCgoKCgAAAAAACgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgAAAAoKCgAAAAoKCgoKCgoK
+        CgoKCgAACgoKCgoKCgoKCgAKCgoKAAAACgoKCgoKCgoKCgoKAAAKCgoKCgoKCgoKCgoKCgoKCgoKCgoK
         CgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgAACgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKAAAK
         CgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoKCgoK
-        CgoKCgoKCgoKCgoKCgoKCgoKCg8PDw8PDw8PCgoKCv////////////////////////8KDwAAAAAPDw8K
-        CgoK//8M//8M/wwMDP///////////woPDw8PDw8PDwoKCgr//wz//wz/DP//DP//////////CgoKCgoK
-        CgoKCgoKCv//DAwMDP8M/wz///////////8KDw8PDw8PDw8KCgoK//8M//8M/wz/Dwz//////////woP
-        AAAADw8PDwoKCgr//wz//wz/DAwM////////////Cg8PDw8PD///CgoKCv//////////////////////
-        //8KCgoKCgoKCgoKCgoK/////////////////////////woPDw8PDw8PDwoKCgr/////////////////
-        ////////Cg8AAP////8PCgoKCv////////////////////////8KD/////////8KCgoK////////////
-        ////////////DwoKCgoKCgoKCgoKCgr///////////////////////8PCgoKCgoKCgoKCgoKCv8A//8A
-        //8AAP////8AAP//AAAACgoKCgoKCgoKDwoK/wD//wD/AP//AP//AP///wD/DwoKCgoKCgoKCg8PCgr/
-        AP8AAP8A//8A//8A////AAAACgoKCgoKCgoPDw8KCv8AAP8A//8AAP//AAAA//8A/w8ACgoKCgoKDw8P
-        DwoK/wD//wD/////////AP////8AAAoKCgoKCg8PDw8PCgr/AP//AP////////8A/////w8PCgoKCgoP
-        Dw8PDw8KCv////////////////////////8KCgoKDw8PDw8PDwoKCgoKCgoKCgoKCgoKCgoKCgoKCgoK
-        Cg8PDw8PDw8P/woKCgoA/wAAAP///////woKFAoKCgoPDw8PDw8PD////woKCgoKCgoKCgoKCgoKCgoK
-        CgoKDw8PDw8PDw///////woKCgoKCgoKCgoKCgoKCgoKCg8PDw8PDw8PD///oAAAAAAAAACAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAoAAAAEAAA
+        CgoKCgoKCgoKCgoKCgoKCgoKCgAAAAAAAAAACgoKCg8PDw8PDw8PDw8PDw8PDw8PDw8KAAAAAAAAAAAK
+        CgoKDw8MDw8MDwwMDA8PDw8PDw8PDwoAAAAAAAAAAAoKCgoPDwwPDwwPDA8PDA8PDw8PDw8PCgoKCgoK
+        CgoKCgoKCg8PDAwMDA8MDwwPDw8PDw8PDw8KAAAAAAAAAAAKCgoKDw8MDw8MDwwPDwwPDw8PDw8PDwoA
+        AAAAAAAAAAoKCgoPDwwPDwwPDAwMDw8PDw8PDw8PCgAAAAAAAAAACgoKCg8PDw8PDw8PDw8PDw8PDw8P
+        Dw8KCgoKCgoKCgoKCgoKDw8PDw8PDw8PDw8PDw8PDw8PDwoAAAAAAAAAAAoKCgoPDw8PDw8PDw8PDw8P
+        Dw8PDw8PCgAAAAAAAAAACgoKCg8PDw8PDw8PDw8PDw8PDw8PDw8KAAAAAAAAAAAKCgoKDw8PDw8PDw8P
+        Dw8PDw8PDw8PDwoKCgoKCgoKCgoKCgoPDw8PDw8PDw8PDw8PDw8PDw8PCgoKCgoKCgoKCgoKCg8ADw8A
+        Dw8AAA8PDw8AAA8PAAAACgoKCgoKCgoKAAoKDwAPDwAPAA8PAA8PAA8PDwAPDwoKCgoKCgoKCgAACgoP
+        AA8AAA8ADw8ADw8ADw8PAAAACgoKCgoKCgoAAAAKCg8AAA8ADw8AAA8PAAAADw8ADw8ACgoKCgoKAAAA
+        AAoKDwAPDwAPDw8PDw8PAA8PDw8AAAoKCgoKCgAAAAAACgoPAA8PAA8PDw8PDw8ADw8PDw8PCgoKCgoA
+        AAAAAAAKCg8PDw8PDw8PDw8PDw8PDw8PDw8KCgoKAAAAAAAAAAoKCgoKCgoKCgoKCgoKCgoKCgoKCgoK
+        CgAAAAAAAAAAAAoKCgoAAAAAAAAAAAAAAAoKFAoKCgoAAAAAAAAAAAAAAAoKCgoKCgoKCgoKCgoKCgoK
+        CgoKAAAAAAAAAAAAAAAAAAoKCgoKCgoKCgoKCgoKCgoKCgAAAAAAAAAAAAAA4AAAB8AAAAOAAAABAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAP8AAACHAAAA/wAAAAAAAAD/AAAAjwAAAP8AAAAAAAAA/wAAAJ8AAAD
+        /AAAAAAAAAAAAAAAAQAAAAMAAAAHAAAADwAAAB8AAAA/AAAAfwAAAP+CPwH/wAAD/+AAB/8oAAAAEAAA
         ACAAAAABAAgAAAAAAAABAAAAAAAAAAAAAAABAAAAAQAAAAAAAEJCQgBYWFgAhoaGAJqZmQCcnJwApKOk
         ANDPzwDm5OUA8e/wAPb29gAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXAOoAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -298,8 +301,8 @@
         BgYGBgYGBgYABgYGAAAGBgYGBgAGBgYGBgYGBgYGBgYGBgYGBgYGBgYGBgYABgYGBgYGBgYGBgYGBgYG
         BgYGBgYGBgYGBgYGBgYACv8I/////wn/BgAAAAYGAAD///8A/wn//wb/CgAGBgAA//8AAP////8GBgYG
         BgYAAP8A/wD/////BgAAAAYGAAAA//8A/////wb/CgAGBgAA////AP8J//8GBgYGBgYACv8JCQkJCf//
-        BgYGBgAGBgYGBgYGBgYGBgYGBgAAAAYGAAoAAAAGBhQGBgAAAAD/BgYGBgYGBgYGBgAAAADAAwAAgAEA
-        AAAAAAAAAAAAAAAAAAAAAABAAAAAQAIAAEAAAABAAgAAQAIAAEAAAABAAQAAAAMAAIAHAACADwAA
+        BgYGBgAGBgYGBgYGBgYGBgYGBgAAAAYGAAoAAAAGBhQGBgAAAAAABgYGBgYGBgYGBgAAAADAAwAAgAEA
+        AAAAAAAAAAAAAAAAAAAAAABAAAAAQAIAAEAAAABAAgAAQAIAAEAAAABAAQAAAAMAAIAHAADADwAA
 </value>
   </data>
 </root>
